update Spanish and Chinese vote results

--- a/src/flavors/pboakland/locale/zh_Hant/LC_MESSAGES/django.po
+++ b/src/flavors/pboakland/locale/zh_Hant/LC_MESSAGES/django.po
@@ -4,8 +4,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-03-30 00:44-0400\n"
-"PO-Revision-Date: 2017-02-22 05:52+0000\n"
+"POT-Creation-Date: 2017-03-30 02:17-0400\n"
+"PO-Revision-Date: 2017-03-30 05:43+0000\n"
 "Last-Translator: Language-Team: Chinese Traditional (https://www.transifex."
 "com/mapseed/teams/58669/zh-Hant/)\n"
 "Language-Team: Traditional Chinese\n"
@@ -543,12 +543,92 @@ msgid ""
 "<strong><em>You made it happen: here are your PB Oakland priorities winners</"
 "em></strong>\n"
 msgstr ""
+"\n"
+"<a href=\"http://www2.oaklandnet.com/oakca1/groups/ceda/documents/policy/"
+"oak062978.pdf\"><h2>投票有了結果！</h2></a>\n"
+"<strong><em>全靠有你：這就是你的屋崙參與式預算制定（Oakland PB）優先撥款的勝"
+"出項目</em></strong>\n"
 
 #: flavors/pboakland/jstemplates/pages/overview.html:5
+msgid ""
+"\n"
+"<p>\n"
+"We are excited to share that the first ever PB Oakland process is complete!\n"
+"</p>\n"
+"<p>\n"
+"Over 1,200 community members voted in PB Oakland to help decide how to spend "
+"$784,678 over 2 years to benefit low-and moderate-income residents in "
+"Oakland Council Districts 1 and 2!\n"
+"</p>\n"
+"<p>\n"
+"Thank you to everyone who participated in the first ever PB Oakland process! "
+"You are helping to deepen democracy and build stronger communities through "
+"PB during a time when we all need it the most.\n"
+"</p>\n"
+"<p>\n"
+"Special thanks to the Community Development District Board Members, District "
+"1 and 2 Staff, the Budget Delegates, our outreach partners: Asian Pacific "
+"Environmental Network (APEN) and Oakland Rising, and all the volunteers and "
+"participants! This process has been administered by the City of Oakland "
+"Housing & Community Development Department with support from the "
+"Participatory Budgeting Project and supported by generous grants from The "
+"California Endowment and the Akonadi Foundation.​\n"
+"</p>\n"
+"<p>\n"
+"The full list of winning priority projects can be found here: <a href="
+"\"http://www2.oaklandnet.com/oakca1/groups/ceda/documents/policy/oak062978."
+"pdf\">CD1 and CD2 Funding Priorities</a>. The city of Oakland is currently "
+"conducting a Request for Proposals (RFP) process in which the Community "
+"Development District Boards will make funding recommendations in April. For "
+"more information on the RFP process, <a href=\"http://www2.oaklandnet.com/"
+"government/o/hcd/s/CDBG/index.htm\">click here</a>.\n"
+"</p>\n"
+"<p>\n"
+"P.S. If there was an idea you were rooting for that didn’t win, don’t worry! "
+"All of the ideas submitted during the process will be shared with both "
+"District Boards and Council Office staff for future consideration.\n"
+"</p>\n"
+msgstr ""
+"\n"
+"<p>\n"
+"我們好興奮和大家分享這次屋崙參與式預算制定（Oakland PB）史無前例的進程已經大"
+"功告成！\n"
+"</p>\n"
+"<p>\n"
+"超過 1, 200位社區人士於屋崙參與式預算制定（Oakland PB）的選舉投了票，藉此幫助"
+"決定如何於兩年之内花費 $784,678讓屋崙市議會第一及第二選區的中、低收入居民受"
+"惠！\n"
+"</p>\n"
+"<p>\n"
+"感謝參與過今次屋崙參與式預算制定（Oakland PB）史無前例進程的每一位人士！你們"
+"幫助深化了民主，並且經由參與式預算制定（PB）建立更強健的社區，而這正是我們所"
+"有人對此最需要的時候。 \n"
+"</p>\n"
+"<p>\n"
+"特別鳴謝「社區發展區委員會」各委員、第二區及第二區職工、各預算代表、我們的外"
+"展合作伙伴：亞太環保網絡(APEN)和屋崙升起(Oakland Rising)，以及所有義工和參與"
+"者！這個進程一直由屋崙市房屋及社區發展部行政主理、「參與式預算制定項目」給與"
+"支援，並且得到加州傳統基金會（The California Endowment）和阿肯納迪基金會"
+"（The Akonadi Foundation）慷慨補助金的支持\n"
+"</p>\n"
+"<p>\n"
+"勝出優先項目的完整清單可以在這裡找到： <a href=\"http://www2.oaklandnet.com/"
+"oakca1/groups/ceda/documents/policy/oak062978.pdf\">CD1 and CD2 Funding "
+"Priorities</a>. 屋崙市政府刻下正在進行一項「邀請提交建議書」(RFP)程序；社區發"
+"展區委員會將於四月作出撥款建議。想得知更多有關「邀請提交建議書」程序的資訊，"
+"請 <a href=\"http://www2.oaklandnet.com/government/o/hcd/s/CDBG/index.htm\">"
+"按這裡</a>。\n"
+"</p>\n"
+"<p>\n"
+"附記：如果你支持的一個主意未能勝出，請不要擔心！ 所有於過程提交過的主意將會同"
+"時跟兩區的區委員會以及市議會區辦公室的職員分享，以便將來得到考慮。\n"
+"</p>\n"
+
+#: flavors/pboakland/jstemplates/pages/overview.html:25
 msgid "Explore the map!"
 msgstr "探索地圖！"
 
-#: flavors/pboakland/jstemplates/pages/overview.html:6
+#: flavors/pboakland/jstemplates/pages/overview.html:26
 msgid ""
 "For information on participatory budgeting in the U.S. and Canada, visit the "
 "website of the <a href=\"http://www.participatorybudgeting.org/\" "
@@ -557,12 +637,7 @@ msgstr ""
 "有關參與美國和加拿大預算編制的資訊，請訪問<a href=\"http://www."
 "participatorybudgeting.org/\" target=”_blank”>參與預算編制項目</a>的網站。"
 
-#: flavors/pboakland/jstemplates/pages/overview.html:7
-#, fuzzy
-#| msgid ""
-#| "For more information on the City of Oakland’s Community Development Block "
-#| "Grant (CDBG) program, click <a href=\"http://www2.oaklandnet.com/"
-#| "government/o/hcd/s/CDBG/index.htm\" target=”_blank”>here</a>."
+#: flavors/pboakland/jstemplates/pages/overview.html:27
 msgid ""
 "For more information on the City of Oakland’s Community Development Block "
 "Grant (CDBG) program, <a href=\"http://www2.oaklandnet.com/government/o/hcd/"
@@ -572,11 +647,11 @@ msgstr ""
 "www2.oaklandnet.com/government/o/hcd/s/CDBG/index.htm\" target=”_blank”>這裡"
 "</a>。"
 
-#: flavors/pboakland/jstemplates/pages/overview.html:8
+#: flavors/pboakland/jstemplates/pages/overview.html:28
 msgid "Participatory Budgeting Oakland"
 msgstr "參與奧克蘭預算編制"
 
-#: flavors/pboakland/jstemplates/pages/overview.html:9
+#: flavors/pboakland/jstemplates/pages/overview.html:29
 msgid ""
 "is an innovative democratic process that gives Oakland residents of City "
 "Council Districts 1 and 2 the power to set priorities for how federal "
@@ -619,37 +694,3 @@ msgstr ""
 #: flavors/pboakland/templates/index.html:54
 msgid "Powered by"
 msgstr "技術支援"
-
-#~ msgid ""
-#~ "\n"
-#~ "<em>\n"
-#~ "<a href=\"https://pbstanford.org/oakland2017d1\"><h1>Vote here for "
-#~ "District 1</h1></a>\n"
-#~ "<a href=\"https://pbstanford.org/oakland2017d2\"><h1>Vote here for "
-#~ "District 2</h1></a>\n"
-#~ "</em>\n"
-#~ msgstr ""
-#~ "\n"
-#~ "<em>\n"
-#~ "<a href=\"https://pbstanford.org/oakland2017d2\"><h1>投票處 </h1></a>\n"
-#~ "</em>\n"
-
-#~ msgid ""
-#~ "\n"
-#~ "<h4>The PB Vote takes place Feb 18-22nd!</h4>\n"
-#~ msgstr "\n"
-
-#~ msgid ""
-#~ "\n"
-#~ "<img src=\"http://i.imgur.com/u13G9jG.png\">\n"
-#~ "<img src=\"http://i.imgur.com/nkhPpWV.png\">\n"
-#~ msgstr ""
-#~ "\n"
-#~ "<img src=\"http://i.imgur.com/6WdFSrs.png\">\n"
-
-#~ msgid ""
-#~ "\n"
-#~ "<strong><p>Voting will take place at the district kick off events "
-#~ "(details below), online, and at mobile sites throughout the districts."
-#~ "<br><br>Online voting will run through Feb 22</strong>\n"
-#~ msgstr "\n"
